feature: remove status field from badge, city and infrastructure entities
