# backend/internal/domain/infrastructure.go
@@ -13,16 +13,8 @@ type Infrastructure struct {
 	BackgroundColor string
 	TextColor       string
 	Icon            *string
-	Status          InfrastructureStatus
 	SortOrder       int
 	CreatedAt       time.Time
 	UpdatedAt       time.Time
 	DeletedAt       *time.Time
 }
-
-type InfrastructureStatus string
-
-const (
-	InfrastructureStatusActive   InfrastructureStatus = "active"
-	InfrastructureStatusInactive InfrastructureStatus = "inactive"
-)
